# mt5-grpc

./: .gitignore  README.md  generate_proto.ps1  pyproject.toml  runserver.py
go/: .gitignore  go.work  go.work.sum
go/examples/: main.go
go/mt5grpc/: go.mod  go.sum  mappings.go
go/mt5grpc/client/: client.go  history.go  market.go  market_data.go  misc.go  orders.go  positions.go  symbols.go
go/mt5grpc/core/enums/: enums.go
go/mt5grpc/core/types/: types.go
go/mt5grpc/generated_proto/: enums.pb.go  messages.pb.go  services.pb.go  services_grpc.pb.go
go/mt5grpc/internal/pb/: enums.pb.go  messages.pb.go  services.pb.go  services_grpc.pb.go
go/mt5grpc/utils/: utils.go
go/tests/: client_test.go  go.mod  go.sum  history_test.go  market_data_test.go  market_test.go  misc_test.go  orders_test.go  positions_test.go  symbols_test.go
proto/: enums.proto  messages.proto  services.proto
python/: pyproject.toml
python/mt5_grpc/core/: enums.py  types.py
python/mt5_grpc/mocks/: fake_mt5.py
python/mt5_grpc/mt5_grpc_client/: __init__.py  clients.py  interceptors.py
python/mt5_grpc/mt5_grpc_server/: __init__.py  configs_manager.py  interceptors.py  mappings.py  server.py  services.py
python/mt5_grpc/util/: type_mapping.py  util.py
python/tests/integration/: conftest.py  test_fakemt5.py
src/mt5_grpc/core/: abstracts.py  enums.py  types.py
src/mt5_grpc/mt5_grpc_client/: clients.py  mappings.py
src/mt5_grpc/mt5_grpc_server/: configs_manager.py  server.py  services.py
tests/: util.py
tests/integration/: base.py  conftest.py  test_metatrader5.py
